<?xml version="1.0"?>
<package>
  <name>pybind11_catkin</name>
  <version>1.0.0</version>
  <description>Package for generating python bindings</description>
  <maintainer email="mnaveau@tue.mpg.de">Movement Control and Generation Group - MPI-IS</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>
