<?xml version="1.0"?>
<package format="3">

    <name>pybind11_catkin</name>
    <version>1.0.0</version>

    <description>Package for generating python bindings</description>
  
    <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

    <license>BSD 3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>mpi_cmake_modules</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>